# trop

./: .gitignore  .rustfmt.toml  AGENTIC_NAVIGATION_GUIDE.md  AGENTS.md  CI_CD_SETUP.md  CONCURRENCY_FIX_FINAL_STEPS.md  CONCURRENCY_FIX_PROGRESS.md  Cargo.toml  ConcurrencyFixPlan.md  ConcurrencyFixSecondRound.txt  DevelopmentLog.md  FinalConcurrencyFixup.txt  LICENSE  LICENSE-APACHE  PROPERTY_TESTS_SUMMARY.md  PortReservationLibraryBug.md  README.md  THIRD_PARTY_LICENSES.md  about.hbs  about.toml  justfile  plan-review-feedback-phase-11.md
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: github-actions-specialist.md  navigation-guide-fixer.md  phase-completion-verifier.md  phase-planner.md  plan-critic.md  project-administrivia-drone.md  project-historian.md  property-test-writer.md  rust-code-refiner.md  rust-compilation-fixer.md  rust-implementer.md  rust-test-writer.md  test-failure-investigator.md
.claude/hooks/: rustfmt-on-edit.sh
.githooks/: pre-push
.github/: dependabot.yml  pull_request_template.md
.github/scripts/: test-plugin-hooks.sh  validate-plugin-semantics.sh
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  coverage.yml  criterion-benchmarks.yml  dependabot-auto-merge.yml  deploy-site.yml  multi-platform.yml  plugin-validate.yml  property-tests.yml  release.yml  site-check.yml  site-publish.yml
ci/: criterion_compare.py
examples/: README.md  basic_usage.md
examples/configs/: simple.toml  team.toml
examples/docker_example/: README.md  docker-compose.yml
plans/: FutureDirections-MigrationTesting.md
plans/phases/: phase-01-project-scaffold.md  phase-02-sqlite-database-layer.md  phase-03-path-handling-system.md  phase-04-basic-reservation-operations.md  phase-05-configuration-system.md  (+15 more)
reference/: ImplementationPlan.md  ImplementationSpecification.md
remediation/: DONE-P1-01-StickyFieldOverrides.md  DONE-P1-02-GroupReservationAtomicity.md  DONE-P1-03-ReserveOccupancyFlagsNoEffect.md  DONE-P1-04-ReserveMinMaxOverrideSemantics.md  DONE-P2-01-DataDirResolutionPanic.md  DONE-P2-02-IgnoredCriticalTests.md  DONE-P3-01-MissingCoverageForCompletionsAndOccupancyFlags.md  DONE-P3-02-ReadmeImplementationDrift.md  DONE-P3-03-StaleAgenticNavigationGuide.md  DONE-P3-05-CliModuleDuplication.md  P3-04-CheckedInBackupSourceFiles.md
site/: .gitignore  .prettierignore  README.md  astro.config.mjs  cspell.json  justfile  package-lock.json  package.json  playwright.config.ts
trop/: Cargo.toml  README.md
trop-cli/: Cargo.toml  README.md  build.rs
trop-cli/benches/: cli_bench.rs
trop-cli/src/: cli.rs  error.rs  lib.rs  main.rs  utils.rs
trop-cli/src/commands/: assert_data_dir.rs  assert_port.rs  assert_reservation.rs  autoclean.rs  autoreserve.rs  compact_exclusions.rs  completions.rs  exclude.rs  expire.rs  init.rs  list.rs  list_projects.rs  migrate.rs  mod.rs  port_info.rs  prune.rs  release.rs  reserve.rs  reserve_group.rs  scan.rs  show_data_dir.rs  show_path.rs  validate.rs
trop-cli/tests/: assertion_utility_commands.rs  cleanup_commands.rs  cli.rs  completions_command.rs  error_handling.rs  global_options.rs  group_commands.rs  init_command.rs  integration_test.rs  list_command.rs  list_projects_command.rs  migrate_command.rs  phase_10_commands.rs  release_command.rs  reserve_command.rs
trop-cli/tests/common/: mod.rs
trop/benches/: operations_bench.rs  path_bench.rs
trop/proptest-regressions/config/: validator.txt
trop/proptest-regressions/path/: relationship.txt
trop/proptest-regressions/port/: group_proptests.txt
trop/src/: error.rs  lib.rs  logging.rs  port.rs  reservation.rs
trop/src/config/: builder.rs  builder.rs.bak  environment.rs  loader.rs  merger.rs  merger.rs.bak  mod.rs  proptests.rs  schema.rs  validator.rs  validator.rs.bak
trop/src/database/: config.rs  connection.rs  migrations.rs  mod.rs  operations.rs  schema.rs  test_util.rs  transaction.rs
trop/src/operations/: autoreserve.rs  cleanup.rs  executor.rs  inference.rs  init.rs  migrate.rs  mod.rs  plan.rs  proptests.rs  release.rs  reserve.rs  reserve_group.rs
trop/src/output/: formatters.rs  mod.rs  shell.rs
trop/src/path/: canonicalize.rs  mod.rs  normalize.rs  proptests.rs  relationship.rs  resolver.rs  types.rs
trop/src/port/: allocator.rs  allocator_proptests.rs  exclusions.rs  group.rs  group_proptests.rs  occupancy.rs  proptests.rs
trop/src/reservation/: proptests.rs
trop/tests/: concurrent_operations.rs  config_integration.rs  database_integration.rs  git_inference.rs  group_reservation_integration.rs  idempotency.rs  integration_test.rs  operations_integration.rs  path_validation.rs  phase6_integration.rs  planning.rs  port_allocation_integration.rs  race_conditions.rs  stress_testing.rs
trop/tests/common/: database.rs  mod.rs
trop/tests/fixtures/configs/hierarchy/child/: trop.local.yaml  trop.yaml
trop/tests/fixtures/configs/hierarchy/parent/: trop.yaml
trop/tests/fixtures/configs/invalid/: bad_port_range.yaml  duplicate_offset.yaml  invalid_project.yaml  unknown_field.yaml
trop/tests/fixtures/configs/valid/: complete.yaml  minimal.yaml  with_exclusions.yaml  with_reservations.yaml
(+42 files in other folders)
