[workspace]
resolver = "2"
members = ["trop", "trop-cli"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
chrono = "0.4"
anyhow = "1.0"
log = "0.4"
serde_json = "1.0"
