[workspace]
resolver = "2"
members = ["trop", "trop-cli"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0"
chrono = "0.4"
anyhow = "1.0"
log = "0.4"
serde_json = "1.0"
tempfile = "3.13"
home = "0.5"
