[package]
name = "trop-cli"
version = "0.1.0"
edition = "2021"
authors = ["trop contributors"]
license = "MIT"
description = "CLI tool for managing ephemeral port reservations"
repository = "https://github.com/prb/trop"

[[bin]]
name = "trop"
path = "src/main.rs"

[dependencies]
trop = { path = "../trop" }
clap = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
