[package]
name = "trop-cli"
version = "0.1.0"
edition = "2021"
authors = ["trop contributors"]
license = "MIT"
description = "CLI tool for managing ephemeral port reservations"
repository = "https://github.com/prb/trop"

[[bin]]
name = "trop"
path = "src/main.rs"
doc = false

[dependencies]
trop = { path = "../trop" }
clap = { workspace = true, features = ["derive", "env"] }
clap_complete = "4.5"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
csv = "1.3"
home = "0.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
clap = { workspace = true, features = ["derive", "env"] }
clap_mangen = "0.2"  # Compatible with clap 4.5
