[package]
name = "trop"
version = "0.1.0"
edition = "2021"
authors = ["trop contributors"]
license = "MIT"
description = "Library for managing ephemeral port reservations"
repository = "https://github.com/prb/trop"

[dependencies]
clap = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
home = { workspace = true }
port-selector = "0.1"

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
proptest = "1.0"
criterion = "0.5"
serial_test = "3.2"
mockall = "0.13"

[[bench]]
name = "path_bench"
harness = false
